Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.813****

**** Support bit vectors > 64 bits wide in DPI import and exports.

**** Fix error on enum references to other packages, bug339. [Alex Solomatnikov]

**** Fix DPI undeclared svBitVecVal compile error, bug346. [Chandan Egbert]

**** Fix DPI bit vector compile errors, bug347. [Chandan Egbert]

**** Fix CDCRSTLOGIC report showing endpoint flops without resets.

**** Fix compiler warnings on SPARC, bug288. [Ahmed El-Mahmoudy]

* Verilator 3.812 2011/04/06

***  Add --trace-max-width and --trace-max-array, bug319.  [Alex Solomatnikov]

***  Add --Wno-fatal to turn off abort on warnings. [by Stefan Wallentowitz]

**** Support ${...} and $(...) env vars in .vc files.  [by Stefan Wallentowitz]

**** Support $bits(data_type), bug327.  [Alex Solomatnikov]

**** Support loop unrolling on width mismatches, bug333. [Joe Eiler]

**** Support simple cast operators, bug335.  [Alex Solomatnikov]

**** Accelerate bit-selected inversions.

**** Add error on circular parameter definitions, bug329. [Alex Solomatnikov]

**** Fix concatenates and vectored bufif1, bug326. [Iztok Jeras]

* Verilator 3.811 2011/02/14

**** Report errors on duplicated or empty pins, bug321.  [Christian Leber]

**** Report error on function call output tied to constant.  [Bernard Deadman]

**** Throw UNUSED/UNDRIVEN only once per net in a parametrized module.

**** Fix internal error on functions called as SV tasks.  [Bernard Deadman]

**** Fix internal error on non-inlined inout pins.  [Jeff Winston]

**** Fix false BLKSEQ on non-unrolled for loop indexes.  [Jeff Winston]

**** Fix block comment not separating identifiers, bug311. [Gene Sullivan]

**** Fix warnings to point to lowest net usage, not upper level ports.

**** Fix error on constants connected to outputs, bug323.  [Christian Leber]
